Fix stuck navbar when hiding the downloads button

--- a/parfait/components/sidebar.css
+++ b/parfait/components/sidebar.css
@@ -36,7 +36,7 @@
     }
     &:has(
       #nav-bar toolbarbutton[open]:not(#urlbar-searchmode-switcher),
-      #nav-bar:hover, #downloads-button[notification]
+      #nav-bar:hover, #downloads-button[notification]:not([hidden])
     ) :is(#tabbrowser-tabbox, #sidebar-box, #sidebar-splitter) {
       margin-top: 0 !important;
       transition-delay: 0s !important;
@@ -473,7 +473,7 @@ moz-button[view="viewCustomizeSidebar"] { order: 99; }
         &:not(:has(
           #sidebar-button:hover, #back-button:hover, #forward-button:hover,
           #stop-reload-button:hover, #vertical-spacer:hover, #urlbar:hover
-        )):has(#nav-bar:hover, #nav-bar toolbarbutton[open], #downloads-button[notification]) #nav-bar {
+        )):has(#nav-bar:hover, #nav-bar toolbarbutton[open], #downloads-button[notification]:not([hidden])) #nav-bar {
           top: 0;
           transition-delay: 0s !important;
         }
@@ -484,7 +484,7 @@ moz-button[view="viewCustomizeSidebar"] { order: 99; }
         .titlebar-buttonbox-container:hover, #sidebar-button:hover,
         #back-button:hover, #forward-button:hover,
         #stop-reload-button:hover, #vertical-spacer:hover, #urlbar:hover
-      )):has(#nav-bar:hover, #nav-bar toolbarbutton[open], #downloads-button[notification]) #nav-bar {
+      )):has(#nav-bar:hover, #nav-bar toolbarbutton[open], #downloads-button[notification]:not([hidden])) #nav-bar {
         top: 0;
         transition-delay: 0s !important;
       }
